Tue May 31 21:28:33 2011  Tanaka Akira  <akr@fsij.org>

	* test/ruby/test_signal.rb (TestSignal#test_signal_requiring):
	  redirect stderr to null device.

Thu Jun  2 00:45:26 2011  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/extconf.rb: fix for uninitialized global variables.
	  [Ruby 1.9 - Bug #4811]

Wed Jun  1 21:57:08 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread_pthread.c (native_sleep): fix 1000times calculation error.
	  this is a regression since r31457. [Bug #4808] [ruby-dev:43606]

Wed Jun  1 17:19:16 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread_pthread.c: remove unused macro.

Wed Jun  1 15:42:18 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (peek_n): new macro to see next nth char.

Wed Jun  1 15:40:46 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/rbinstall.rb (gem): fix for rubygems change.

Wed Jun  1 14:07:57 2011  Ryan Davis  <ryand-ruby@zenspider.com>

	* lib/minitest/*: Imported minitest 2.2.2 (r6281)
	* test/minitest/*: ditto

Wed Jun  1 12:35:50 2011  Ryan Davis  <ryand-ruby@zenspider.com>

	* lib/rubygems*: Import rubygems 1.8.5 (released @ 137c80f)
	* test/rubygems: Ditto

Wed Jun  1 12:34:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* NEWS: add new features of bigdecimal.

Wed Jun  1 09:41:14 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/cgi/util.rb:  Improve documentation.  Patch by Kuba Fietkiewicz.
	  [Ruby 1.9 - Bug #4775]
	* lib/cgi/core.rb:  ditto

Wed Jun  1 09:26:05 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/mathn.rb:  Improve documentation and attach it to Numeric.
	  Modified from patch by Anil V.  [Ruby 1.9 - Bug #4762]

Wed Jun  1 09:21:30 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/prime.rb:  Indent examples enough to appear as code sections.
	  Note that Prime is Enumerable.  [#4762]

Wed Jun  1 07:34:57 2011  Eric Hodel  <drbrain@segment7.net>

	* hash.c (key_i):  Change rdoc from "the first occurrence" to "an